samples/_failures_safe/1761611328_b2b80c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_101745f3.c: In function ‘main’:
./samples/SAFE/__tmp_101745f3.c:149:5: error: expected declaration or statement at end of input
  149 |     if (!buffer_append(&input_buf, (uint8_t*)line, input_len)) {
      |     ^~
./samples/SAFE/__tmp_101745f3.c:149:5: error: expected declaration or statement at end of input
